--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == README
-
+This is michael irschicks first commited ruby/rails app to git
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
